--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,12 @@
 
       {{ content }}
 
+      <div>
+        <a href="https://runflexio.catagama.com">
+          <img src="img/runflexio.jpg" alt="runflexio">
+        </a>
+      </div>
+
       </section>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
