--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 
       <div>
         <a href="https://runflexio.catagama.com">
-          <img src="img/runflexio.jpg" alt="runflexio">
+          <img src="img/runflexio.jpg" alt="runflexio" style="border-radius: 1rem;">
         </a>
       </div>
 
