--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <style type="text/css">
+      .portfolio_element{
+        border-radius: 1rem;
+      }
+      .portfolio_element:hover{
+        border-radius: 2rem;
+      }
+    </style>
+
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
@@ -53,7 +62,7 @@
 
       <div>
         <a href="https://runflexio.catagama.com">
-          <img src="img/runflexio.jpg" alt="runflexio" style="border-radius: 1rem;">
+          <img src="img/runflexio.jpg" alt="runflexio" class="portfolio_element" style="border-radius: 1rem;">
         </a>
       </div>
 
