--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
       .portfolio_element{
         border-radius: 1rem;
       }
-      .portfolio_element:hover{
+      a:hover img {
         border-radius: 2rem;
       }
     </style>
