--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
 
       <div>
         <a href="https://runflexio.catagama.com">
-          <img src="img/runflexio.jpg" alt="runflexio" class="portfolio_element" style="border-radius: 1rem;">
+          <img src="img/runflexio.jpg" alt="runflexio" class="portfolio_element">
         </a>
       </div>
 
