--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,11 @@
     <style type="text/css">
       .portfolio_element{
         border-radius: 1rem;
+        transition-timing-function: linear;
+        transition-duration: .2s;
       }
       a:hover img {
-        border-radius: 2rem;
+        border-radius: 1.5rem;
       }
     </style>
 
