--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,10 @@
     <style type="text/css">
       .portfolio_element{
         border-radius: 0.5rem;
-        transition-timing-function: linear;
-        transition-duration: .3s;
+        transition-timing-function: ease-in-out;
+        transition-duration: .3s
+        transition-delay: .1s;
+      
       }
       a:hover img {
         border-radius: 1.5rem;
