--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,11 @@
         transition-timing-function: ease-in-out;
         transition-duration: .3s
         transition-delay: .1s;
-      
+        opacity: 0.9
       }
       a:hover img {
         border-radius: 1.5rem;
+        opacity: 1
       }
     </style>
 
