--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
       .portfolio_element{
         border-radius: 0.5rem;
         transition-timing-function: ease-in-out;
-        transition-duration: .3s
+        transition-duration: .3
         transition-delay: .1s;
         opacity: 0.9
       }
