--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <style type="text/css">
       .portfolio_element{
         border-radius: 0.7rem;
-        transition-timing-function: ease-in-out;
+        transition-timing-function: linear;
         transition-duration: .3
         opacity: 0.9
       }
