--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,9 @@
       .portfolio_element{
         border-radius: 0.8rem;
         transition-timing-function: linear;
-        transition-duration: .3
-        opacity: 0.9
+        transition-duration: .3s;
+        transition-delay: .1s;
+        opacity: 0.9;
       }
       a:hover img {
         border-radius: 1.5rem;
