--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    {% if site.title %}
+    <title>{{ site.title }}</title>
+    {% endif %}
+    
     <style type="text/css">
       .portfolio_element{
         border-radius: 0.8rem;
