--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
             </br> <a href="{{ site.behance }}">Behance</a>
           {% endif %}
           {% if site.mailto %}
-            </br> <a href="{{ site.mailto }}">Mail</a>
+            </br> <a href="mailto:{{ site.mailto }}">{{ site.mailto}}</a>
           {% endif %}
 
         </p>
