--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Wolf Youth">
+    <meta property="og:title" content="Wolf Youth>
+    <meta property="og:description" content="Мы делаем музыку">
+    <meta property="og:url" content="http://wolfyouth.ru">
+    <meta property="og:locale" content="ru_RU">
+    <meta property="og:image" content="{{site.logo | relative_url}}">
+    <meta property="og:image:width" content="512">
+    <meta property="og:image:height" content="512">
+    
     {% if site.title %}
     <title>{{ site.title }}</title>
     {% endif %}
