--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Wolf Youth">
     <meta property="og:title" content="Wolf Youth>
-    <meta property="og:description" content="Мы делаем музыку">
+    <meta property="og:description" content="{{ site.description }}>
     <meta property="og:url" content="http://wolfyouth.ru">
     <meta property="og:locale" content="ru_RU">
     <meta property="og:image" content="{{site.logo | relative_url}}">
