--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     <meta property="og:image" content="{{site.logo | relative_url}}">
     <meta property="og:image:width" content="512">
     <meta property="og:image:height" content="512">
+    <meta name="author" content="Wolf Youth">
     
     {% if site.title %}
     <title>{{ site.title }}</title>
