--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,6 +85,13 @@
           <img src="img/runflexio.jpg" alt="runflexio" class="portfolio_element">
         </a>
       </div>
+        
+        
+      <div>
+        <a href="https://cargocollective.com/AnjiGames/HELLRIDER-III">
+          <img src="img/hellrider3.jpg" alt="runflexio" class="portfolio_element">
+        </a>
+      </div>
 
       </section>
     </div>
