--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,20 +79,19 @@
       <section>
 
       {{ content }}
-
+   
+      <div>
+        <a href="https://cargocollective.com/AnjiGames/HELLRIDER-III">
+          <img src="img/hellrider3.jpg" alt="Hellrider III" class="portfolio_element">
+        </a>
+      </div>
+        
       <div>
         <a href="https://runflexio.catagama.com">
           <img src="img/runflexio.jpg" alt="runflexio" class="portfolio_element">
         </a>
       </div>
-        
-        
-      <div>
-        <a href="https://cargocollective.com/AnjiGames/HELLRIDER-III">
-          <img src="img/hellrider3.jpg" alt="runflexio" class="portfolio_element">
-        </a>
-      </div>
-
+    
       </section>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
