--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,13 +81,13 @@
       {{ content }}
    
       <div>
-        <a href="https://cargocollective.com/AnjiGames/HELLRIDER-III" target="_blank>
+        <a href="https://cargocollective.com/AnjiGames/HELLRIDER-III" target="_blank">
           <img src="img/hellrider3.jpg" alt="Hellrider III" class="portfolio_element">
         </a>
       </div>
         
       <div>
-        <a href="https://runflexio.catagama.com" target="_blank>
+        <a href="https://runflexio.catagama.com" target="_blank">
           <img src="img/runflexio.jpg" alt="runflexio" class="portfolio_element">
         </a>
       </div>
