--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
    
       <div>
         <a href="https://cargocollective.com/AnjiGames/HELLRIDER-III" target="_blank">
-          <img src="img/hellrider3.jpg" alt="Hellrider III" class="portfolio_element">
+          <img src="img/hellrider3.JPG" alt="Hellrider III" class="portfolio_element">
         </a>
       </div>
         
