--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
       </div>
         
       <div>
-        <a href="https://runflexio.catagama.com" target="_blank">
+        <a href="https://catagama.itch.io/runflexio-exhibition" target="_blank">
           <img src="img/runflexio.jpg" alt="runflexio" class="portfolio_element">
         </a>
       </div>
