--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
             </br> <a href="{{ site.behance }}">Behance</a>
           {% endif %}
           {% if site.mailto %}
-            </br> <a href="mailto:{{ site.mailto }}">Mail</a>
+            </br> <a href="mailto:{{ site.mailto }}">Email</a>
           {% endif %}
 
         </p>
